--- a/index.qmd
+++ b/index.qmd
@@ -11,4 +11,9 @@ Equipped with insights from a diverse background in psychology, communication, j
 
 We all come from unique backgrounds and carry stories that are uniquely ours. **Curiosity** is my beloved guide, helping me learn, ask better questions, practice courage, compassion, and build connections.
 
+<p style="text-align: right;">
+![Basir Talayee](https://www.macalester.edu/entrepreneurship-and-innovation/wp-content/uploads/sites/507/2024/06/Basir-640x0-c-default.jpg){width=200px}
+</p>
+
+
 
