--- a/activities/multivariate_viz.qmd
+++ b/activities/multivariate_viz.qmd
@@ -12,6 +12,53 @@ code-fold: false
 ---
 
 
+::: {.callout-caution title="Learning Goals"}
+**Warm-up (together)**
+
+-   Review univariate & bivariate viz ideas and code.
+
+**Exercises (in groups)**
+
+-   Explore how to visualize *relationships* between *more than* 2 variables.
+:::
+
+
+::: {.callout-note title="Additional Resources"}
+ 
+ - [More ggplot (YouTube)](https://www.youtube.com/watch?v=bkAJ3FAAGqA) by Lisa Lendway
+
+:::
+
+
+::: {.callout-important title="Instructions"}
+
+**General**
+
+-   Be kind to yourself.
+-   Collaborate with and be kind to others. You are expected to work together as a group.
+-   Ask questions. Remember that we won't discuss these exercises as a class.
+
+
+**Activity Specific**
+
+
+Help each other with the following:
+
+-   Create a new Quarto document in the activities folder of your portfolio project and do not forgot to include it in `_quarto.yml` file.  Then click the `</> Code` link at the top right corner of this page and copy the code into the created Quarto document.  This is where you'll take notes.  Remember that the portfolio is yours, so take notes in whatever way is best for you.
+-   **Don't start the Exercises section before we get there as a class.** First, engage in class discussion and eventually collaborate with your group on the exercises!
+-   There are some coding "intuition checks" along the way. The goal here is to start connecting to and expanding upon the structure of our `ggplot()` code. Don't spend more than a few minutes trying these out. If you don't get it, no problem! You can move on and learn the code in the next exercise.
+-   The goal is for every student to finish the required exercises before we meet again. After that, choose your own adventure!
+    -   If you're feeling like the required exercises gave you plenty to chew on, simply stop the activity. Go back and review the material you learned. *You never need to think about the optional exercises.*
+    -   If you're feeling like your brain still has some space after completing the required exercises, try the optional ones. These exercises are either "bonus" visualizations or intuition checks about some material coming up.
+
+:::
+
+
+
+## Review
+
+Let's review some *univariate* and *bivariate* plotting concepts using some daily weather data from Australia. This is a subset of the data from the `weatherAUS` data in the `rattle` package.
+
 ```{r}
 library(tidyverse)
 
@@ -20,14 +67,16 @@ weather <- read.csv("https://mac-stat.github.io/data/weather_3_locations.csv") |
   mutate(date = as.Date(date))  
 
 # Check out the first 6 rows
+
 # What are the units of observation?
+head(weather,6)
 
 
 # How many data points do we have? 
-
+nrow(weather)
 
 # What type of variables do we have?
-
+str(weather)
 ```
 
 
