--- a/activities/data_viz.qmd
+++ b/activities/data_viz.qmd
@@ -248,11 +248,17 @@ NOTE:
 -   Pay attention to the general code properties and structure, not memorization.
 -   Not all of these are "good" plots. We're just exploring `ggplot`.
 
-```{r eval = FALSE}
+```{r}
+
 # adding geom_bar() created a bar chart, where the count of occurrences for each unique rating value is displayed on the y-axis.Show frequncey of each rating
 ggplot(hikes, aes(x = rating)) +
   geom_bar()
 ```
+
+```{r}
+
+```
+
 
 ```{r eval = FALSE}
 # addition of labs(x = "Rating", y = "Number of hikes"). This modifies the axis labels on the plot.
@@ -275,7 +281,7 @@ ggplot(hikes, aes(x = rating)) +
   labs(x = "Rating", y = "Number of hikes")
 ```
 
-```{r eval = FALSE}
+```{r eval = TRUE}
 # Theme was added -(theme_minimal()  minimalistic theme with no background annotations.
 ggplot(hikes, aes(x = rating)) +
   geom_bar(color = "orange", fill = "blue")  +
