--- a/activities/Bivariate_viz.qmd
+++ b/activities/Bivariate_viz.qmd
@@ -66,9 +66,10 @@ Let's review some *univariate* concepts and code using our class survey data. If
 survey <- read.csv("https://ajohns24.github.io/data/112/about_us_2024.csv")
 
 # How many students have now filled out the survey?
-
+head(survey)
 
 # What type of variables do we have?
+str(survey)
 
 ```
 
